Simplify application dto's