@@ -3,16 +3,15 @@ package com.example.category.dto;
 import com.example.category.Category;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CategoryDtoMapper {
 
     public static ResponseCategoryDto mapCategoryToResponseCategoryDto(Category category) {
-        return new ResponseCategoryDto(
-                category.getCategoryId(),
-                category.getName(),
-                category.getDescription()
-        );
+        return ResponseCategoryDto.builder()
+                .id(category.getCategoryId())
+                .name(category.getName())
+                .description(category.getDescription())
+                .build();
     }
 
     public static Category mapRequestCategoryDtoToCategory(RequestCategoryDto requestCategoryDto) {
@@ -24,10 +23,7 @@ public class CategoryDtoMapper {
 
     public static List<ResponseCategoryDto> mapCategoryListToResponseCategoryDtoList(List<Category> categories) {
         return categories.stream()
-                .map(category -> new ResponseCategoryDto(
-                        category.getCategoryId(),
-                        category.getName(),
-                        category.getDescription()
-                )).collect(Collectors.toList());
+                .map(CategoryDtoMapper::mapCategoryToResponseCategoryDto)
+                .toList();
     }
 }
