@@ -6,9 +6,7 @@ import com.example.discount.Discount;
 import com.example.discount.dto.DiscountDtoMapper;
 import com.example.product.Product;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ProductDtoMapper {
 
@@ -23,32 +21,29 @@ public class ProductDtoMapper {
                         null)
                 .categories(requestProductDto.categoryIds().stream()
                             .map(id -> Category.builder().categoryId(id).build())
-                            .collect(Collectors.toList()))
+                            .toList())
                 .build();
     }
 
     public static ResponseProductDto mapProductToResponseProductDto(Product product) {
-        return new ResponseProductDto(
-                product.getProductId(),
-                product.getName(),
-                product.getDescription(),
-                product.getAmount(),
-                product.getPrice(),
-                DiscountDtoMapper.mapDiscountToResponseDiscountDto(product.getDiscount()),
-                product.getCategories().stream().
-                        map(CategoryDtoMapper::mapCategoryToResponseCategoryDto)
-                        .collect(Collectors.toList()),
-                product.getProductPhotos() != null ?
-                        product.getProductPhotos().stream()
-                        .map(productPhoto -> productPhoto.getPhotoName().toString() + ".png")
-                        .collect(Collectors.toList()) :
-                        new ArrayList<>()
-        );
+        return ResponseProductDto.builder()
+                .id(product.getProductId())
+                .name(product.getName())
+                .description(product.getDescription())
+                .amount(product.getAmount())
+                .price(product.getPrice())
+                .discount(DiscountDtoMapper.mapDiscountToResponseDiscountDto(product.getDiscount()))
+                .categories(product.getCategories().stream()
+                        .map(CategoryDtoMapper::mapCategoryToResponseCategoryDto)
+                        .toList())
+                .productPhotos(product.getProductPhotos() != null ? product.getProductPhotos().stream()
+                                .map(productPhoto -> productPhoto.getPhotoName().toString() + ".png").toList() : null)
+                .build();
     }
 
     public static List<ResponseProductDto> mapProductListToProductDtoList(List<Product> products) {
         return products.stream()
                 .map(ProductDtoMapper::mapProductToResponseProductDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
